--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,6 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+NKUH Rholy <nkuhrholy33@gmail.com>
+Terrance Nyamfukudza <Terrynyamz93@gmail.com>
